Changes for 4.2.3rc1

New features:

Bug fixes:
........S. [ZBX-16150] fixed inactive, unmounted, unaccessible VMware datastore causes unknown column nan insertion in field list (akozlovs)
A......... [ZBX-16122] fixed api validation of trigger dependency (averza)

--------------------------------------------------------------------------------
Changes for 4.2.2

4.2.2rc1 was released as 4.2.2 without any changes

--------------------------------------------------------------------------------
Changes for 4.2.2rc1

New features:
..F....... [ZBX-16069] upgraded jQuery version v1.10.2 -> v3.3.1 and jQueryUI v1.10.3 -> v1.12.1 (talbergs)

Bug fixes:
..F....... [ZBX-16032] changed application filtering to partial name search (vmurzins)
...G...... [ZBX-15915] fixed linking error if round() is undefined (akozlovs)
....I..... [ZBX-16074] added file revision number generation for compilation on MS Windows (MVekslers)
..F....... [ZBX-15833] fixed scrollbar in overlay popups (ashubin)
.......PS. [ZBX-16058] fixed error in IPMI poller causing growing queue (asitals)
..F....... [ZBX-16047] fixed division by zero error in SVG graph widget if selected time period is so small that calculated step between 2 milestones is 0s (miks)
..F....... [ZBX-15936] removed "change password" button when cloning media types (vasilijs)
A.F....... [ZBX-11272] changed sorting by type, fixed information disclosure and formatting of recipient name in action log screen item and dashboard widget; added new sortfields to alert API (miks)
A.F....... [ZBX-15416] fixed locale validation in user create and update API methods (miks)
..F....... [ZBX-15877] fixed Tab Key navigation for Safari and Edge browsers (vasilijs)
........S. [ZBX-15891] fixed trigger dependencies are ignored when changing only trigger state (akozlovs)
A......... [ZBX-13029] fixed api validation messages for linktrigger (vasilijs)
...G...... [ZBX-15967] fixed buffer offset for reading hardware info from long DMI files (viktors)