@@ -35,25 +35,24 @@ class testPageOverview extends CLegacyWebTest {
 	public function getFilterData() {
 		return [
 			// Overview check with type 'Triggers'.
-			// TODO: ZBX-15778
-//			[
-//				[
-//					'main_filter' => [
-//						'groupid' => 'all',
-//						'type' => 'Triggers',
-//						'view_style' => 'Left'
-//					],
-//					'result_hosts' => [
-//						'1_Host_to_check_Monitoring_Overview', '3_Host_to_check_Monitoring_Overview',
-//						'4_Host_to_check_Monitoring_Overview', 'Host for triggers filtering'
-//					],
-//					'result_triggers' => [
-//						'1_trigger_Average', '1_trigger_Disaster', '1_trigger_High',
-//						'1_trigger_Not_classified', '1_trigger_Warning', '2_trigger_Information',
-//						'3_trigger_Average', '4_trigger_Average', 'Inheritance trigger with tags'
-//					]
-//				]
-//			],
+			[
+				[
+					'main_filter' => [
+						'groupid' => 'all',
+						'type' => 'Triggers',
+						'view_style' => 'Left'
+					],
+					'result_hosts' => [
+						'1_Host_to_check_Monitoring_Overview',
+						'3_Host_to_check_Monitoring_Overview', '4_Host_to_check_Monitoring_Overview'
+					],
+					'result_triggers' => [
+						'1_trigger_Average', '1_trigger_Disaster', '1_trigger_High',
+						'1_trigger_Not_classified', '1_trigger_Warning', '2_trigger_Information',
+						'3_trigger_Average', '4_trigger_Average'
+					]
+				]
+			],
 			[
 				[
 					'main_filter' => [
@@ -242,30 +241,14 @@ class testPageOverview extends CLegacyWebTest {
 					'name' => 'Trigger-map-test-zbx6840'
 				]
 			],
-			// Acknowledge status option in filter.
+			// Show unacknowledged only option in filter.
 			[
 				[
 					'main_filter' => [
 						'groupid' => 'Group to check Overview',
 						'type' => 'Triggers'
 					],
-					'ack_status' => 'With last event unacknowledged',
-					'result_hosts' => [
-						'1_Host_to_check_Monitoring_Overview'
-					],
-					'result_triggers' => [
-						'1_trigger_Not_classified', '1_trigger_Warning', '1_trigger_Average', '1_trigger_High',
-						'1_trigger_Disaster'
-					]
-				]
-			],
-			[
-				[
-					'main_filter' => [
-						'groupid' => 'Group to check Overview',
-						'type' => 'Triggers'
-					],
-					'ack_status' => 'With unacknowledged events',
+					'ack_status' => true,
 					'result_hosts' => [
 						'1_Host_to_check_Monitoring_Overview'
 					],
@@ -295,16 +278,15 @@ class testPageOverview extends CLegacyWebTest {
 				]
 			],
 			// Age less than option in filter.
-			//	TODO: ZBX-15778
-//			[
-//				[
-//					'main_filter' => [
-//						'groupid' => 'Group to check Overview',
-//						'type' => 'Triggers'
-//					],
-//					'age' => '1'
-//				]
-//			],
+			[
+				[
+					'main_filter' => [
+						'groupid' => 'Group to check Overview',
+						'type' => 'Triggers'
+					],
+					'age' => '1'
+				]
+			],
 			// All filter options.
 			[
 				[
@@ -486,15 +468,14 @@ class testPageOverview extends CLegacyWebTest {
 				]
 			],
 			// Do not show suppressed problems with type Triggers.
-			// TODO: ZBX-15778
-//			[
-//				[
-//					'main_filter' => [
-//						'groupid' => 'Host group for suppression',
-//						'type' => 'Triggers'
-//					]
-//				]
-//			],
+			[
+				[
+					'main_filter' => [
+						'groupid' => 'Host group for suppression',
+						'type' => 'Triggers'
+					]
+				]
+			],
 			// Check suppressed problems with type Data.
 			[
 				[
@@ -555,7 +536,7 @@ class testPageOverview extends CLegacyWebTest {
 		}
 
 		if (array_key_exists('ack_status', $data)) {
-			$this->zbxTestDropdownSelect('ack_status', $data['ack_status']);
+			$this->zbxTestCheckboxSelect('ack_status', $data['ack_status']);
 		}
 
 		if (array_key_exists('show_severity', $data)) {
